2004-08-11  Tim Jenness  <timj@jach.hawaii.edu>

	* IO/JCMT.pm: Publish a method for cleaning the target name (so
	that the JCMT VAX control system will not get upset) and use that
	method in the JCMT catalog writer (so that a "use this target"
	message) is guaranteed to agree with the name in the catalogue.

2004-05-20  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.7.0)

        * Updated documentation ready for release.
          
2004-03-02  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>

	* Added Query/MPC support along with associated test harness.

2004-03-01  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>

	* IO/VOTable: added support for parallax and proper motions.
	
2004-02-25  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>

	* Catalog.pm: added fielddate method.

	* Star/Star.pm: added insertdate method.
	
2004-02-23  Tim Jenness  <tjenness@cpan.org>

	* IO/GaiaPick.pm: Add GaiaPick log file support

2004-02-05  Tim Jenness  <timj@jach.hawaii.edu>

	* t/2_votable.t: Now attempt to skip VOtable tests if the VOTable
	module is not installed.

2004-02-05  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

        * Added STL support (read only) as a pluggable IO module
          along with associated test harness.

2003-11-14  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.5.2)

        * README: Updated location of VOTable module package, which
          moved. 

2003-10-30  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.5.1)

        * IO/Cluster.pm: Added read support for new style character
          quality flags. Cluster files are still written using the
          old style numeric flags.
          
2003-10-17  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.5.0)

        * IO/VOTable.pm: Very simple VOTable reader added, should
          now get at least basic information into the Astro::Catalog
          object if it is passed a VOTable.
          
        * t/2_votable.t: Added test harness for reading VOTables.  
